waterlevel forecasts are up with dropbox data

--- a/driver_forecasts/Depth.Rmd
+++ b/driver_forecasts/Depth.Rmd
@@ -13,6 +13,7 @@ library(oce)
 #remotes::install_github("FLARE-forecast/ropenmeteo")
 source("../R/load_river_discharge.R")
 source("../R/fit_tides.R")
+source("../R/fit_discharge.R")
 source("../R/remove_tidal_signal.R")
 source("../R/convert_to_vera_met_P1D.R")
 ```
@@ -21,19 +22,11 @@ Workflow:
 First account for tides, and remove tidal signal from data
 Then account for river discharge
 
-To make this a forecast
-1. Get tide and river forecasts/hindcasts
-2. Fit tide model
-3. Fit discharge model
-4. Use discharge to predict tide-adjusted depth
-5. Convert dataset to 15-minute timestep with forecasted tides
-6. Use predicted tides to predict chamber depth
-7. Back to daily timestep
 
 Get tide and river forecasts/hindcasts
 
 ```{r}
-drivers <- read_csv("../Raw_data/GENX_SD_Export_Waterlevel_2021-05-06_to_2022-12-30_derived_clean_btemps.csv", 
+drivers <- read_csv("../processed_data/WaterLevel_output_15min.csv", 
                     show_col_types = F) %>%
   mutate(Date = as.Date(time2))
 
@@ -45,10 +38,6 @@ start_date <- format(as.Date(min(drivers$time2)), "%Y%m%d")
 end_date <- format(as.Date(today+forecast_days), "%Y%m%d")
 tide_noaa <- read_csv(glue::glue("https://api.tidesandcurrents.noaa.gov/api/prod/datagetter?product=predictions&application=NOS.COOPS.TAC.WL&begin_date={start_date}&end_date={end_date}&datum=MLLW&station=8575579&time_zone=GMT&units=metric&interval=hilo&format=csv"))
 # note: not much of a correlation between depth and any of these individually
-
-drivers %>%
-  ggplot(aes(x = time2, y = corrected_depth, color = as.factor(chamber_treatment))) +
-  geom_line()
 ```
 
 Fit a model to noaa tide data so we have continuous data
@@ -97,11 +86,6 @@ final %>%
   pivot_longer(cols = c(corrected_depth, final_pred), names_to = "Type", values_to = "Value") %>%
   ggplot(aes(x = Date, y = Value, color = Type)) +
   geom_line()
-
-final %>%
-  #filter(Date > today) %>%
-  ggplot(aes(x = Date, y = final_pred)) +
-  geom_point()
 ```
 
 
