--- a/models_in_progress/PEPRMT-Tidal/Run_PEPRMT_Tidal.Rmd
+++ b/models_in_progress/PEPRMT-Tidal/Run_PEPRMT_Tidal.Rmd
@@ -12,73 +12,37 @@ Load packages
 ```{r setup, echo=FALSE, message=FALSE}
 library(pacman)
 p_load(R.matlab, here, tidyverse, FME, Metrics, lubridate, gridExtra)
+source("run_PEPRMT.R")
+source("PEPRMT_GPP_FINAL.R")
+source("PEPRMT_CH4_FINAL.R")
+source("PEPRMT_Reco_FINAL.R")
 ```
 
 Load data
 
 ```{r}
 target <- read_csv("peprmt_target.csv") %>%
-  as.data.frame()
+  as.data.frame() %>%
+  mutate(NO3_mg_L = 0.062) #Copied from US_PLM
 ch4_validation <- read_csv("ch4_validation.csv") %>%
   as.data.frame()
+example <- read_csv("All_sites_master.csv") 
+
+target %>%
+  mutate(site_char = "gcrew") %>%
+  full_join(example) %>%
+  pivot_longer(cols = -c(site_char, DOY_disc, DOY, site)) %>%
+  filter(!is.na(value),
+         !grepl("GPP|CO2|FPAR|Reco", name)) %>%
+  ggplot(aes(y = site_char, x = value)) +
+  geom_boxplot()+
+  facet_wrap(~name, scales = "free_x")
 ```
 
 Run all modules
 
 ```{r}
-#First run GPP Module
-source('PEPRMT_GPP_FINAL.R')
-
-GPP_theta <- c(0.7479271, 1.0497113, 149.4681710, 94.4532674 )
-GPP_mod_target <- PEPRMT_GPP_final(GPP_theta,
-                            data = target)
-
-#Create a new dataset that included model results
-target_results <- target %>%
-  left_join(GPP_mod_target %>%
-              rename(GPP_mod = GPP,
-                     DOY = Time_2))
-
-#Second run Reco Module
-#Add modeled GPP into data before running Reco module (16th column)
-target[,16]<-target_results$GPP_mod
-
-source('PEPRMT_Reco_FINAL.R')
-
-Reco_theta <- c(18.41329, 1487.65701, 11.65972, 61.29611 )
-Reco_mod_target <- PEPRMT_Reco_FINAL(Reco_theta,
-                              data = target,
-                              wetland_type=2)
-
-#Create a new dataset that included model results
-target_results<-target_results %>%
-  left_join(Reco_mod_target %>%
-              rename(DOY = Time_2,
-                     Reco_mod = Reco_full))
-
-#Last, run CH4 module
-#Add modeled S1, S2 into data before running CH4 module (17th & 18th columns)
-target[,17]<-target_results$S1
-target[,18]<-target_results$S2
-
-source('PEPRMT_CH4_FINAL.R')
-
-CH4_theta<- c( 14.9025078, 0.4644174, 16.7845002, 0.4359649, 15.8857612,
-               0.5120464, 486.4106939, 0.1020278 )
-CH4_mod_target <- PEPRMT_CH4_FINAL(CH4_theta,
-                            data = target,
-                            wetland_type=2)
-
-#Create a new dataset that included model results
-target_results<-target_results %>%
-  left_join(CH4_mod_target %>%
-              rename(DOY = Time_2,
-                     CH4_mod = pulse_emission_total))
-
-comb %>%
-  ggplot(aes(y = CH4_slope_umol_per_day / 0.196, x = time2)) +
-  geom_point(alpha = 0.02)+
-  scale_y_log10()
+target_results <- run_PEPRMT(target)
 ```
 
 Plot
@@ -98,22 +62,48 @@ for(site_x in 1:length(unique(target$site))){
     theme_bw(base_size = 12) 
   print(plot)
 }
-
-for(site_x in 1:length(unique(target$site))){
-  site1 <- subset(target_results, site == site_x)
-  plot <- site1 %>%
-    complete(DOY = first(DOY):max(DOY)) %>%
-    ggplot(aes(DOY)) +
-    #geom_line(aes(x = DOY, y = GPP_mod, color = "observation"), 
-    #          data = ch4_validation %>% filter(site == site_x) %>%
-    #            complete(DOY = first(DOY):max(DOY)))+
-    geom_line(aes(x = DOY, y = GPP_mod, color = "model"))+
-    labs(x = "", y="GPP") +
-    ## To make the plot look prettier
-    theme_bw(base_size = 12) 
-  print(plot)
-}
-
-# 
 ```
 
+Run sensitivity analysis
+
+```{r}
+sens_analysis <- function(var, target){
+  message(var)
+  # Up
+  target_modif <- target %>%
+    mutate(!!var := !!sym(var) * 10)
+  target_results_up <- run_PEPRMT(target_modif) %>%
+    mutate(var_modif = var,
+           modif = "up 10x")
+  
+  # Down
+  target_modif <- target %>%
+    mutate(!!var := !!sym(var) / 10)
+  target_results_down <- run_PEPRMT(target_modif) %>%
+    mutate(var_modif = var,
+           modif = "down 10x")
+  
+  bind_rows(target_results_up, target_results_down)
+}
+
+sens_vars <- c("Year", "TA_C", "WTD_cm", "PAR_umol_m2_day", "EVI", "LUE", "Wetland_age_years", "Salinity_daily_ave_ppt", "NO3_mg_L", "SOM_MEM_gC_m3")
+
+sens_results <- sens_vars %>%
+  map(sens_analysis, target = target) %>%
+  bind_rows() 
+
+ch4_add <- data.frame(var_modif = sens_vars,
+           site_char = "gcrew",
+           modif = "orig") %>%
+  left_join(ch4_validation %>%
+              mutate(site_char = "gcrew")) %>%
+  rename(CH4_mod = CH4_slope_mgC_m2_d)
+
+sens_results %>%
+  mutate(CH4_mod = CH4_mod * 1000) %>%
+  full_join(ch4_add) %>%
+  ggplot(aes(x = modif, y = CH4_mod)) +
+  geom_boxplot() +
+  facet_wrap(~var_modif, scales = "free_y") +
+  coord_cartesian(ylim = c(-50, 250))
+```
