--- a/models_in_progress/PEPRMT-Tidal/Load:format data.Rmd
+++ b/models_in_progress/PEPRMT-Tidal/Load:format data.Rmd
@@ -13,11 +13,10 @@ library(lubridate)
 
 ```{r}
 source("../../R/qaqc.R")
-raw <- read_csv("../../Raw_data/GENX_Flux_SD_Loggernet_2021-05-05_to_2022-12-31_derived.csv", show_col_types = FALSE)
-raw2 <- read_csv("../../Raw_data/GENX_Flux_SD_Loggernet_2023-01-01_to_2023-11-15_derived.csv", show_col_types = FALSE)
-comb <- bind_rows(raw, raw2)
+target_raw <- read_csv("../../L1_target.csv", show_col_types = FALSE)
 
 #Load PAR and EVI
+met <- read_csv("../../processed_data/met_output.csv", show_col_types = FALSE)
 par <- read_csv("../../processed_data/PAR_output.csv", show_col_types = FALSE)
 evi <- read_csv("../../processed_data/modeled_EVI.csv", show_col_types = FALSE) 
 
@@ -35,13 +34,9 @@ example_data <- All_sites_master %>%
               mean(All_sites_master$SOM_MEM_gC_m3[All_sites_master$SOM_MEM_gC_m3 > 0], 
                    na.rm = TRUE))
 
-target <- comb %>%
-  mutate(time2 = with_tz(time2, tzone = "America/New_York"),
-         time2 = as.Date(time2)) %>%
-  qaqc() %>%
-  rename(site_id = chamber_treatment) %>%
+target <- target_raw %>%
   mutate(site = as.numeric(as.factor(site_id)),
-         Date = as.Date(time2),
+         Date = as.Date(datetime),
          DOY_disc = yday(Date)) %>%
   group_by(site_id) %>%
   mutate(DOY = yday(first(Date)) + 
@@ -71,7 +66,23 @@ target <- comb %>%
   as.data.frame()
 
 #Create CH4 validation dataset
-ch4_validation <- comb %>%
+ch4_validation <- target %>%
+  mutate(site = as.numeric(as.factor(site_id)),
+         Date = as.Date(datetime),
+         DOY_disc = yday(Date)) %>%
+  group_by(site_id) %>%
+  mutate(DOY = yday(first(Date)) + 
+           as.numeric(difftime(Date, first(Date), units = "days")),
+         Year = year(Date)) %>%
+  group_by(Date, site) %>%
+  summarize(across(where(is.numeric), mean, na.rm = TRUE)) %>%
+  rename(CH4_slope_umol_per_day = observation) %>%
+  select(DOY, DOY_disc, Year, site, CH4_slope_umol_per_day) %>%
+  as.data.frame() %>%
+  mutate(CH4_slope_mgC_m2_d = CH4_slope_umol_per_day * 12.011 / 1000 / 0.196)
+
+#Create CH4 validation dataset
+ch4_sd <- comb %>%
   mutate(time2 = with_tz(time2, tzone = "America/New_York"),
          time2 = as.Date(time2)) %>%
   qaqc() %>%
